backend/vulnerability_analysis/testing/hof1/segments/klee-out-0/test000011.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strcmp.c
Line: 34
assembly.ll line: 12090
State: 1
Stack: 
	#000012090 in strcmp(139089217060864, 140003273342976) at libc/string/strcmp.c:34
	#100008203 in authenticate() at testing/heap_buff_overflow/segments/segment_1_klee.c:35
	#200008348 in __klee_posix_wrapped_main() at testing/heap_buff_overflow/segments/segment_1_klee.c:49
	#300006102 in __user_main(1, 140018540609536, 140018540609552) at src/runtime/POSIX/klee_init_env.c:245
	#400000556 in __uClibc_main(140002761637888, 1, 140018540609536, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000721 in main(1, 140018540609536)
Info: 
	address: 139089217060872
	next: object at 138773000093696 of size 4
		MO7708[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
